--- a/Lab_1_EC4301.ipynb
+++ b/Lab_1_EC4301.ipynb
@@ -10,7 +10,7 @@
    },
    "source": [
     "<center>\n",
-    "    <img src=\"https://github.com/juanandres-montero/microeconometria/blob/main/logo%20EEC%20grande.png?raw=1\" width=\"396\" height=\"161\"><br>\n",
+    "    <img src=\"https://github.com/juanandres-montero/macroeconometria/blob/main/logo%20EEC%20grande.png" width=\"396\" height=\"161\"><br>\n",
     "    <b>EC4301 MACROECONOMETRÍA</b><br>\n",
     "    <b>Asist: Juan Andrés Montero Zúñiga</b>\n",
     "<br><br>\n",
