Se creó con Colab

--- a/Laboratorio_08_Arch_y_Garch.ipynb
+++ b/Laboratorio_08_Arch_y_Garch.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM8dBNP9JhICk+QdVzpqkuv",
+      "authorship_tag": "ABX9TyOywAE4QttQhgxw9+APz71r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,30 +31,22 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<link rel=\"stylesheet\" type=\"text/css\"\n",
-        "    href=\"https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css\">\n",
-        "<style>\n",
-        "body {\n",
-        "  font-family: \"Computer Modern Sans\", sans-serif;\n",
-        "}\n",
-        "h1, h3 {\n",
-        "  font-weight: bold;\n",
-        "}\n",
-        "</style>\n",
-        "\n",
         "<center>\n",
-        "  <img src=\"https://github.com/juanandres-montero/microeconometria/blob/main/logo%20EEC%20grande.png?raw=1\" width=\"396\" height=\"161\">\n",
-        "  <h1></h1>\n",
-        "  <h1 style=\"text-align: center;\">EC-4301 MACROECONOMETRÍA</h1>\n",
-        "  <h2 style=\"text-align: center;\">Asist. Juan Andrés Montero Zúñiga</h2>\n",
-        "  <br>\n",
-        "  <h3> Laboratorio 08:</h3>\n",
-        "  <div style=\"font-size:250%;color:white; background-color: #0064b0;\">ARCH y GARCH</div>\n",
+        "    <img src=\"https://github.com/juanandres-montero/macroeconometria/blob/main/logo%20EEC%20grande.png?raw=1\" width=\"396\" height=\"161\"><br>\n",
+        "    <b style=\"font-size:200%\">EC4301 MACROECONOMETRÍA</b><br>\n",
+        "    <b style=\"font-size:100%\">Asistente: Juan Andrés Montero</b><br><br>\n",
+        "    <b style=\"font-size:100%\"> Laboratorio #8:</b>\n",
+        "    <br>    \n",
+        "    <div style=\"font-size:150%; color:white; background-color: #0064b0; padding-top: 20px; padding-bottom: 20px; width: 50%; margin: 0 auto; border-radius: 15px; text-align: center;\">\n",
+        "        Modelos ARCH y GARCH\n",
+        "    </div>\n",
         "</center>\n",
-        "<br><br>\n",
         "\n",
-        "<i>\n",
-        "    Creado: 2024-Jun\n",
+        "<br>\n",
+        "\n",
+        "<i style=\"font-size:80%\">\n",
+        "    Creado: Junio 2024 <br>\n",
+        "    Actualizado: Octubre 2024\n",
         "</i>\n",
         "\n",
         "<hr>"
@@ -91,7 +83,7 @@
       "metadata": {
         "id": "FV3LP8TVsoSo"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -117,7 +109,7 @@
         "id": "5_-nNvnEskX4",
         "outputId": "528ae42f-aae2-4c33-958f-dec507938167"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -490,7 +482,7 @@
         "id": "OqexHFxJvtMT",
         "outputId": "76a49c7f-9ff8-4447-90fe-4767a9ecde1f"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -517,7 +509,7 @@
         "id": "MuOK48Ndvv2L",
         "outputId": "a4cb51a1-a20f-439b-e468-29bc7985f3ca"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -563,7 +555,7 @@
         "id": "BJLoBNJU1Z_C",
         "outputId": "22f5e0c0-4209-4d99-cea1-72cf76e8280c"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -590,14 +582,13 @@
         "best_model = None\n",
         "warnings.filterwarnings(\"ignore\")\n",
         "for p in range(5):\n",
-        "    for d in range(2):\n",
         "        for q in range(5):\n",
         "            try:\n",
-        "                model = ARIMA(rendimientos, order=(p, d, q))\n",
+        "                model = ARIMA(rendimientos, order=(p, 1, q))\n",
         "                results = model.fit()\n",
         "                if results.aic < best_aic:\n",
         "                    best_aic = results.aic\n",
-        "                    best_order = (p, d, q)\n",
+        "                    best_order = (p, 1, q)\n",
         "                    best_model = results\n",
         "            except:\n",
         "                continue\n",
@@ -613,7 +604,7 @@
         "id": "1DcJLXcx2j5d",
         "outputId": "fb364e2a-e159-43e2-eb39-4b24665ce939"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -683,7 +674,7 @@
         "id": "MXuCNbTy2oC5",
         "outputId": "8fb20f90-39f9-4676-e489-6c42d041fed5"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -713,7 +704,7 @@
         "id": "culXSIvq9HUk",
         "outputId": "29e89a9b-22f3-4f47-dc1b-144554025071"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -746,7 +737,7 @@
         },
         "outputId": "7c17d2d3-fc8b-4c39-e266-453bf728feba"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -773,7 +764,7 @@
         "id": "9TUtOXcs-sLL",
         "outputId": "c9b1d5b3-46d8-460b-81f5-6c2fa66f051a"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -847,7 +838,7 @@
         "id": "AwA7kU3xAAjU",
         "outputId": "c2ad6d57-47a6-4e78-c5b3-5740c38b11da"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -922,7 +913,7 @@
         "id": "2oETmG-_BE8B",
         "outputId": "0329bf58-6221-4212-dcdb-1266b4130d3e"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -968,7 +959,7 @@
       "metadata": {
         "id": "glAx7ViiWjck"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
