--- a/Laboratorio_09_Cambio_Estructural_1.ipynb
+++ b/Laboratorio_09_Cambio_Estructural_1.ipynb
@@ -52,7 +52,7 @@
     "\n",
     "## **Contexto del Estudio**\n",
     "\n",
-    "Analizaremos el ejemplo de [Greene (2018)](#referencias) {cite:} sobre los datos del mercado de gasolina en Estados Unidos para el período 1953-2004. Este caso es particularmente interesante porque nos permite estudiar:\n",
+    "Analizaremos el ejemplo de Greene (2018) sobre los datos del mercado de gasolina en Estados Unidos para el período 1953-2004. Este caso es particularmente interesante porque nos permite estudiar:\n",
     "\n",
     "1. Las elasticidades ingreso y precio de la demanda\n",
     "2. Los efectos de precios cruzados (autos nuevos y usados)\n",
